--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "C:/Users/yek/OneDrive - Limestone DSB/Workspace/Java/lib/javafx-sdk-21.0.9/lib/*.jar"
+        "C:/Users/yek/OneDrive - Limestone DSB/Workspace/Java/lib/javafx-sdk-21.0.9/lib/*.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx.base.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx.controls.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx.fxml.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx.graphics.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx.media.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx.swing.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx.web.jar",
+        "c:\\Users\\og5ys09\\OneDrive - Limestone DSB\\Grade 11 CS\\Lib\\javafx-sdk-21.0.9\\lib\\javafx-swt.jar"
     ]
 }
